# pinatsu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-all.bat  imgui.ini  rebuild_cmake.bat  shell.bat
breakout/: build.bat
breakout/src/: breakout.cpp  breakout.h  entry.cpp
data/: deferredLight.frag  deferredLight.frag.spv  deferredLight.vert  deferredLight.vert.spv  frag.spv  geometry.frag  geometry.frag.spv  geometry.vert  geometry.vert.spv  shader.frag  shader.vert  utils.glsl  vert.spv
data/meshes/: test.txt
engine/: CMakeLists.txt  build.bat
engine/data/: frag.spv  shader.frag
engine/src/: defines.h  entry.h  game.h  pnt_platform.cpp  pnt_platform.h
engine/src/containers/: hashtable.cpp  hashtable.h
engine/src/core/: application.cpp  application.h  assert.h  clock.cpp  clock.h  event.cpp  event.h  helper.cpp  helper.h  input.cpp  input.h  logger.cpp  logger.h  pstring.cpp  pstring.h  transform.cpp  transform.h  utils.cpp  utils.h
engine/src/memory/: linearAllocator.cpp  linearAllocator.h  pmemory.cpp  pmemory.h
engine/src/platform/: filesystem.cpp  filesystem.h  platform.h  platform_win32.cpp
engine/src/renderer/: camera.cpp  camera.h  pipeline.h  renderTypes.h  rendererBackend.cpp  rendererBackend.h  rendererFrontend.cpp  rendererFrontend.h
engine/src/renderer/vulkan/: vulkanBackend.cpp  vulkanBackend.h  vulkanBuffer.cpp  vulkanBuffer.h  vulkanCommandBuffer.cpp  vulkanCommandBuffer.h  vulkanDevice.cpp  vulkanDevice.h  vulkanFramebuffer.cpp  vulkanFramebuffer.h  vulkanImGui.cpp  vulkanImGui.h  vulkanImage.cpp  vulkanImage.h  vulkanPipeline.cpp  vulkanPipeline.h  vulkanPlatform.h  vulkanRenderpass.cpp  vulkanRenderpass.h  vulkanShaderModule.cpp  vulkanShaderModule.h  vulkanSwapchain.cpp  vulkanSwapchain.h  vulkanTypes.h  vulkanUtils.cpp  vulkanUtils.h  vulkanVertexDeclaration.cpp  vulkanVertexDeclaration.h
engine/src/renderer/vulkan/shaders/: vulkanDeferredShader.cpp  vulkanDeferredShader.h  vulkanForwardShader.cpp  vulkanForwardShader.h
engine/src/resources/: resourcesTypes.h
engine/src/resources/loaders/: glftLoader.cpp  gltfLoader.cpp  gltfLoader.h  meshLoader.cpp  meshLoader.h  textureLoader.cpp  textureLoader.h
engine/src/scene/: scene.h
engine/src/systems/: entitySystem.cpp  entitySystem.h  entitySystemComponent.cpp  entitySystemComponent.h  materialSystem.cpp  materialSystem.h  meshSystem.cpp  meshSystem.h  physicsSystem.cpp  physicsSystem.h  renderSystem.cpp  renderSystem.h  resourceSystem.cpp  resourceSystem.h  textureSystem.cpp  textureSystem.h
engine/src/systems/components/: ballComp.h  comp_base.h  comp_camera.cpp  comp_camera.h  comp_light_point.cpp  comp_light_point.h  comp_light_spot.cpp  comp_light_spot.h  comp_name.cpp  comp_name.h  comp_parent.cpp  comp_parent.h  comp_render.cpp  comp_render.h  comp_tag.cpp  comp_tag.h  comp_transform.cpp  comp_transform.h  entity.cpp
engine/src/systems/components/controllers/: comp_flyover_camera.cpp
engine/src/systems/entity/: entity.cpp  entity.h  entityParser.cpp  entityParser.h
engine/src/systems/handle/: handle.cpp  handle.h  handleDefinition.cpp  handleDefinition.h  handleManager.cpp  handleManager.h  obj_manager.h
engine/src/systems/modules/: module.h  module_boot.cpp  module_boot.h  module_entities.cpp  module_entities.h  module_manager.cpp  module_manager.h
makebin/: CMakeCache.txt  Makefile  cmake_install.cmake
math/: math_types.h  pmath.h
sandbox/: CMakeLists.txt  build.bat
sandbox/assets/meshes/cube/: AnimatedCube.gltf
sandbox/assets/meshes/cubeMarbre/: cube.gltf
sandbox/src/: entry.cpp  sandbox.cpp  sandbox.h
vsbin/: ALL_BUILD.vcxproj  CMakeCache.txt  Pinatsu.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters  sandbox.vcxproj  sandbox.vcxproj.filters
vsbin/engine.dir/Debug/: engine.lib.recipe
vsbin/engine.dir/Debug/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vsbin/sandbox.dir/Debug/: sandbox.exe.recipe
vsbin/sandbox.dir/Debug/sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vsbin/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
